--- a/proj2/makefile
+++ b/proj2/makefile
@@ -1,11 +1,11 @@
-HEADERS = Document.h
-OBJECTS = main.o Document.o
+HEADERS = Document.h # header files
+OBJECTS = main.o Document.o # object files
 
-myEditor: $(OBJECTS)
+myEditor: $(OBJECTS) #compile target
 	g++ -std=c++11 -g $^ -o $@
 
-%.o: %.cpp $(HEADERS)
+%.o: %.cpp $(HEADERS) #compile object files
 	g++ -std=c++11 -g -c $< -o $@
 
-clean:
+clean: # clean older builds
 	rm -f *.o myEditor
